[gd_scene load_steps=7 format=2]

[ext_resource path="res://Actors/Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/Hud.gd" type="Script" id=2]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = SubResource( 2 )

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="Main" parent="." instance=ExtResource( 1 )]

[node name="Restart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -152.0
margin_right = 192.0
margin_bottom = -64.0
custom_fonts/font = SubResource( 1 )
text = "Restart Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -192.0
margin_top = 16.0
margin_right = -32.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 3 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -160.0
margin_right = 112.0
margin_bottom = -116.0
custom_fonts/font = SubResource( 3 )
text = "Game Over!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1008.0
margin_top = 16.0
margin_right = -832.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="end_game" from="Main" to="." method="_on_Main_end_game"]
[connection signal="food_eaten" from="Main" to="." method="_on_Main_food_eaten"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
